[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "neptune-reco"
version = "0.1.0"
description = "A transformer-based point cloud processing model for neutrino event reconstruction"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Felix Yu"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Physics",
]
requires-python = ">=3.8"
dependencies = [
    "torch>=2.0",
    "numpy>=1.20.0",
    "torch-fps>=0.1.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "black>=22.0",
    "isort>=5.0",
    "flake8>=4.0",
]

[project.urls]
Homepage = "https://github.com/felixyu7/neptune"
Repository = "https://github.com/felixyu7/neptune"
Issues = "https://github.com/felixyu7/neptune/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["neptune*"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.isort]
profile = "black"
line_length = 100
